# Hack4IMPACTTrack2-AI_Ke_Agents

./: .dockerignore  .env.example  .gitignore  .gitkeep  Dockerfile  README.md  app.py  code.html  proprocessing.ipynb  pyproject.toml  requirements.txt  test.csv
frontend/: results.html  upload.html
models/: cicids_scaler.pkl
scripts/: convert_to_tflite.py  preprocessing.py
src/: proprocessing.ipynb  training.ipynb  training_history.pkl
stitch/results_dashboard_sentinel_ai/: code.html
stitch/sentinel_deep_obsidian/: DESIGN.md
stitch/upload_csv_sentinel_ai/: code.html
