[project]
name = "net-ninja"
version = "1.0.0"
description = "Network Intrusion Detection System powered by a DCNN trained on CICIDS-2017"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "joblib>=1.3.0",
    "python-multipart>=0.0.6",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.13.0",
]
